--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "daisyui": "^2.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "watch:tw": "tailwindcss -i src/tw_styles.css -o src/tw_styles_dist.css --watch",
+    "start": "react-scripts start & npm run watch:tw",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
+    "tailwindcss": "^3.1.7"
   }
 }
