--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "watch:tw": "tailwindcss -i src/tw_styles.css -o src/tw_styles_dist.css --watch",
+    "watch:tw": "tailwindcss -i src/css/tw_styles.css -o src/css/tw_styles_dist.css --watch",
     "start": "react-scripts start & npm run watch:tw",
     "build": "react-scripts build",
     "test": "react-scripts test",
